--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
+# Gábor Sári <sari.gabor@gmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-05-09 12:24+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2017-07-18 13:57+0000\n"
+"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -135,10 +136,10 @@ msgid "Jobs"
 msgstr "Feladatok"
 
 msgid "Log clean files"
-msgstr "Megtisztított fájlok naplózása"
+msgstr "Fájlok tisztításának naplózása"
 
 msgid "Log clean files. This drastically increases the log size."
-msgstr "Megtisztított fájlok naplózása. Ez drasztikusan növeli a napló méretét."
+msgstr "Fájlok tisztításának naplózása. Ez drasztikusan megnöveli a napló méretét."
 
 msgid "Message"
 msgstr "Üzenet"
@@ -156,7 +157,7 @@ msgid "Multiscan"
 msgstr "Bővebb vizsgálat"
 
 msgid "Number of database update checks per day. Set to 0 to disable."
-msgstr "Az adatbázis frissítés ellenőrzésének száma naponta. A 0 beállítás tiltja a funkciót."
+msgstr "Adatbázis frissítés ellenőrzések száma naponta. A 0 beállítás tiltja a funkciót."
 
 msgid "On-access"
 msgstr "Hozzáférés"
@@ -210,7 +211,7 @@ msgid "Shared folder"
 msgstr "Megosztott mappa"
 
 msgid "The location of the files to scan."
-msgstr "A fájlok helye az átvizsgáláshoz."
+msgstr "Átvizsgálandó fájlok helye."
 
 msgid "The location which is used as quarantine."
 msgstr "Karanténnak használható hely."
