--- a/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/hu_HU/openmediavault-iscsitarget.po
+++ b/deb/openmediavault-iscsitarget/usr/share/openmediavault/locale/hu_HU/openmediavault-iscsitarget.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
+# Gábor Sári <sari.gabor@gmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2014-03-08 14:28+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2017-07-18 14:00+0000\n"
+"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -85,7 +86,7 @@ msgid "Extra options"
 msgstr "Extra opciók"
 
 msgid "File IO"
-msgstr "IO fájl"
+msgstr "Fájl IO"
 
 msgid "First burst length"
 msgstr "Első sorozat hossza"
