--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/hu_HU/openmediavault-lvm2.po
@@ -4,6 +4,7 @@
 # 
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
+# Gábor Sári <sari.gabor@gmail.com>, 2017
 # mersaint <mersaint@gmail.com>, 2012
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2015,2017
 msgid ""
@@ -11,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-14 20:04+0200\n"
-"PO-Revision-Date: 2017-07-14 18:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-17 17:33+0000\n"
+"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +22,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Active"
-msgstr ""
+msgstr "Aktív"
 
 msgid "Add physical volume"
 msgstr "Fizikai kötet hozzáadása"
@@ -44,7 +45,7 @@ msgid "Create logical volume"
 msgstr "Logikai kötet létrehozása"
 
 msgid "Create volume group"
-msgstr "Kötet csoport létrehozása"
+msgstr "Kötetcsoport létrehozása"
 
 msgid "Description"
 msgstr "Leírás"
@@ -62,7 +63,7 @@ msgid "Do you really want to create the physical volume?"
 msgstr "Valóban létre szeretnéd hozni a fizikai kötetet?"
 
 msgid "Do you really want to create the volume group?"
-msgstr "Valóban létre szeretnéd hozni a kötet csoportot?"
+msgstr "Valóban létre szeretnéd hozni a kötetcsoportot?"
 
 msgid "Do you really want to resize the selected physical volume?"
 msgstr "Valóban át szeretnéd méretezni a kiválasztott fizikai kötetet?"
@@ -71,7 +72,7 @@ msgid "Edit logical volume"
 msgstr "Logikai kötet szerkesztése"
 
 msgid "Edit volume group"
-msgstr "Kötet csoport szerkesztése"
+msgstr "Kötetcsoport szerkesztése"
 
 msgid "Extend"
 msgstr "Kiterjesztés"
@@ -80,7 +81,7 @@ msgid "Extend logical volume"
 msgstr "Logikai kötet kiterjesztése"
 
 msgid "Extend volume group"
-msgstr "Kötet csoport kiterjesztése"
+msgstr "Kötetcsoport kiterjesztése"
 
 msgid "Free"
 msgstr "Szabad"
@@ -110,13 +111,13 @@ msgid "Reduce"
 msgstr "Csökkentés"
 
 msgid "Reduce volume group"
-msgstr "Kötet csoport csökkentése"
+msgstr "Kötetcsoport csökkentése"
 
 msgid "Resize"
 msgstr "Átméretezés"
 
 msgid "Select a volume group ..."
-msgstr "Válassz ki egy kötet csoportot ..."
+msgstr "Válassz ki egy kötetcsoportot ..."
 
 msgid "Select an device ..."
 msgstr "Válassz ki egy meghajtót ..."
@@ -131,7 +132,7 @@ msgid "Used"
 msgstr "Foglalt"
 
 msgid "Volume group"
-msgstr "Kötet csoport"
+msgstr "Kötetcsoport"
 
 msgid "Volume groups"
-msgstr "Kötet csoportok"
+msgstr "Kötetcsoportok"
