--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/hu_HU/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/hu_HU/openmediavault-shairport.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
+# Gábor Sári <sari.gabor@gmail.com>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2016-12-13 07:12+0000\n"
-"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
+"PO-Revision-Date: 2017-07-18 13:52+0000\n"
+"Last-Translator: Gábor Sári <sari.gabor@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +35,7 @@ msgid "Name"
 msgstr "Név"
 
 msgid "Password"
-msgstr "Jelszó"
+msgstr "Jelszó "
 
 msgid "Settings"
 msgstr "Beállítások"
