--- a/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
+++ b/deb/openmediavault-usbbackup/usr/share/openmediavault/locale/hu_HU/openmediavault-usbbackup.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the openmediavault-usbbackup package.
 # 
 # Translators:
-# Grawens <szabolcs.szanyi@gmail.com>, 2014
+# Gábor Sári <sari.gabor@gmail.com>, 2017
+# Grawens <szabolcs.szanyi@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-20 11:06+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr "Mentési feladat hozzáadása"
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "administrator."
-msgstr "Egy email üzenet elküldése az adminisztrátornak a parancs kimenettel (ha van ilyen)."
+msgstr "Egy e-mail elküldése az adminisztrátornak a parancs kimenettel (ha van ilyen)."
 
 msgid "Archive"
 msgstr "Archívum"
@@ -62,7 +63,7 @@ msgstr "Archiváló mód engedélyezése."
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr "Engedélyezd eszt az opciót, hogy megtartsa a részben átküldött fájlokat, különben törlésre kerül, ha az átvitel megszakad."
+msgstr "Engedélyezd ezt az opciót, hogy megmaradjanak a csak részben átküldött fájlok, különben ezek törlésre kerülnek, ha az átvitel megszakad."
 
 msgid "Enabled"
 msgstr "Engedélyezve"
@@ -106,7 +107,7 @@ msgid "Preserve extended attributes"
 msgstr "Kiterjesztett attribútumok megőrzése"
 
 msgid "Preserve modification times."
-msgstr "Módosított idő megőrzése."
+msgstr "Módosítás idejének megőrzése."
 
 msgid "Preserve permissions"
 msgstr "Jogosultságok megőrzése"
@@ -118,7 +119,7 @@ msgid "Recurse into directories."
 msgstr "Ismétlődés könyvtárakban."
 
 msgid "Recursive"
-msgstr "Rekurzivitás"
+msgstr "Rekurziv"
 
 msgid "Run"
 msgstr "Futtatás"
@@ -133,7 +134,7 @@ msgid "Send command output via email."
 msgstr "Parancs kimenet elküldése emailben."
 
 msgid "Send email"
-msgstr "Email küldése"
+msgstr "E-mail küldése"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions."
