--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-18 07:22+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -885,7 +885,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "表示中のアイテム {0} - {1} of {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "表示中 {2} 件中 {0} - {1}"
 
 msgid "Djibouti"
 msgstr "ジブチ"
@@ -1316,7 +1316,7 @@ msgid "Firmware version"
 msgstr "ファームウェアのバージョン"
 
 msgid "First Page"
-msgstr ""
+msgstr "最初のページ"
 
 msgid "Flags"
 msgstr "フラグ"
@@ -1761,7 +1761,7 @@ msgid "Laos"
 msgstr "ラオス"
 
 msgid "Last Page"
-msgstr ""
+msgstr "最後のページ"
 
 msgid "Latvia"
 msgstr "ラトビア"
@@ -2112,7 +2112,7 @@ msgid "New Zealand"
 msgstr "ニュージーランド"
 
 msgid "Next Page"
-msgstr ""
+msgstr "次のページ"
 
 msgid "Nicaragua"
 msgstr "ニカラグア"
@@ -2145,7 +2145,7 @@ msgid "No connections"
 msgstr "接続はありません"
 
 msgid "No data to display"
-msgstr ""
+msgstr "表示するデータがありません"
 
 msgid "No items to display"
 msgstr "表示できるアイテムはありません"
@@ -2271,7 +2271,7 @@ msgid "Package information"
 msgstr "パッケージ情報"
 
 msgid "Page"
-msgstr ""
+msgstr "ページ"
 
 msgid "Page not found"
 msgstr "ページがありません"
@@ -2487,7 +2487,7 @@ msgid ""
 msgstr "ポーリングによるディスクのスピンアップの防止方法。<br/><ul><li>Never - 電源モードに関わらず、デバイスをポーリング (チェック) します。これは、スピンダウンしているディスクに対してのチェックが行われる際にスピンアップする可能性があります。</li><li>Sleep - スリープモードで無い場合にデバイスをチェックします。</li><li>Standby - スリープ又はスタンバイモードで無い限り、デバイスをチェックします。これらのモードではディスクはほとんど回転しません。ラップトップで使用しているディスクでポーリングによるスピンアップを防止したい場合は望まれる選択肢です。</li><li>Idle - スリープ、スタンバイ、アイドルモードで無い場合にデバイスをチェックします。アイドル状態でもほとんどのディスクは回転しているので、これは望む選択肢ではないかもしれません。</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "前のページ"
 
 msgid "Primary"
 msgstr "プライマリ"
@@ -4043,7 +4043,7 @@ msgid "n/a"
 msgstr "n/a"
 
 msgid "of {0}"
-msgstr ""
+msgstr "全体 {0}"
 
 msgid "old-age"
 msgstr "old-age"
