--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-02 13:53+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-07-20 03:05+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -886,7 +886,7 @@ msgid "Displaying items {0} - {1} of {2}"
 msgstr "显示项目 {0} - {1} 一共 {2}"
 
 msgid "Displaying {0} - {1} of {2}"
-msgstr ""
+msgstr "显示 {0} - {1} 一共 {2}"
 
 msgid "Djibouti"
 msgstr "吉布提"
@@ -1317,7 +1317,7 @@ msgid "Firmware version"
 msgstr "固件版本"
 
 msgid "First Page"
-msgstr ""
+msgstr "首页"
 
 msgid "Flags"
 msgstr "标签"
@@ -1762,7 +1762,7 @@ msgid "Laos"
 msgstr "老挝"
 
 msgid "Last Page"
-msgstr ""
+msgstr "末页"
 
 msgid "Latvia"
 msgstr " 拉脱维亚"
@@ -2113,7 +2113,7 @@ msgid "New Zealand"
 msgstr "新西兰"
 
 msgid "Next Page"
-msgstr ""
+msgstr "下一页"
 
 msgid "Nicaragua"
 msgstr "尼加拉瓜"
@@ -2146,7 +2146,7 @@ msgid "No connections"
 msgstr "无连接"
 
 msgid "No data to display"
-msgstr ""
+msgstr "无数据显示"
 
 msgid "No items to display"
 msgstr "无项目可显示"
@@ -2272,7 +2272,7 @@ msgid "Package information"
 msgstr "软件包信息"
 
 msgid "Page"
-msgstr ""
+msgstr "页"
 
 msgid "Page not found"
 msgstr "没有找到页面"
@@ -2488,7 +2488,7 @@ msgid ""
 msgstr "当定时检查磁盘时避免它开始转动。<br/><ul><li>永不-测试(检查)设备无论是什么功耗模式，当检查时，这可能会停转的磁盘开始转动。</li><li>睡眠-检查设备除非处于睡眠模式。</li><li>待机-检查设备除非设备处于待机和睡眠模式。此模式下磁盘大多没有转动，如果你不想每次检查都转动磁盘，那么这个模式比较适合。</li><li>闲置-检查设备除非设备处于待机、睡眠、闲置模式，在闲置状态下，大多数磁盘还在转动，所以这可能不适合你。</li></ul>"
 
 msgid "Previous Page"
-msgstr ""
+msgstr "上一页"
 
 msgid "Primary"
 msgstr "主要"
