--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -23,8 +23,15 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.86) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2017 22:03:00 +0200
+
 openmediavault (3.0.85) stable; urgency=low
 
+  * Update locales.
   * Various improvements in the WebUI.
   * Display auto network interfaces (e.g. bonded and vlan interfaces) in the
     CLI welcome message.
