--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.86) stable; urgency=low
 
-  *
+  * Various improvements in the WebUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2017 22:03:00 +0200
 
