Fix bug in omv-initsystem. The MTU value must be 0.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -26,6 +26,7 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.86) stable; urgency=low
 
   * Various improvements in the WebUI.
+  * Fix bug in omv-initsystem.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2017 22:03:00 +0200
 
