--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.86) stable; urgency=low
 
+  * Update locales.
   * Various improvements in the WebUI.
   * Fix bug in omv-initsystem.
   * Fix bug in /etc/smartd.conf.
