--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.87) stable; urgency=low
+
+  * Fix bug in \OMV\System::getNextDevice().
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Aug 2017 17:13:23 +0200
+
 openmediavault (3.0.86) stable; urgency=low
 
   * Update locales.
