--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-02 15:50+0200\n"
-"PO-Revision-Date: 2017-07-24 06:15+0000\n"
+"PO-Revision-Date: 2017-08-08 17:36+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -2594,10 +2594,10 @@ msgid "Raw value"
 msgstr "Raw érték"
 
 msgid "Read only"
-msgstr "Csak olvasható"
+msgstr "Csak olvasás"
 
 msgid "Read-only"
-msgstr "Csak olvasható"
+msgstr "Csak olvasás"
 
 msgid "Read/Execute"
 msgstr "Olvasás/Végrehajtás"
@@ -3911,7 +3911,7 @@ msgid "Vatican"
 msgstr "Vatikán"
 
 msgid "Vendor"
-msgstr "Vendor"
+msgstr "Csatoló"
 
 msgid "Venezuela"
 msgstr "Venezuela"
