--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -23,6 +23,12 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.88) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Aug 2017 09:33:39 +0200
+
 openmediavault (3.0.87) stable; urgency=low
 
   * Update locales.
@@ -32,6 +38,7 @@ openmediavault (3.0.87) stable; urgency=low
 
 openmediavault (3.0.86) stable; urgency=low
 
+  * Update locales.
   * Various improvements in the WebUI.
   * Fix bug in omv-initsystem.
   * Fix bug in /etc/smartd.conf.
