--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/sv_SV/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/sv_SV/openmediavault-ldap.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Henrik Sandström <henrik.sandstroem@gmail.com>, 2012
+# Jonatan Nyberg, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2015-04-06 12:07+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-11 09:08+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,16 +29,16 @@ msgid "Enable"
 msgstr "Aktivera"
 
 msgid "Enable PAM"
-msgstr ""
+msgstr "Aktivera PAM"
 
 msgid "Enable SSL/TLS"
-msgstr ""
+msgstr "Aktivera SSL/TLS"
 
 msgid "Enable secure connection."
-msgstr ""
+msgstr "Aktivera säker anslutning."
 
 msgid "Extra client options"
-msgstr ""
+msgstr "Extra klientalternativ"
 
 msgid "Extra options"
 msgstr "Extra alternativ"
@@ -57,18 +58,18 @@ msgstr "Lösenord"
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/ldap.conf' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Se <a href='http://linux.die.net/man/5/ldap.conf' target='_blank'>manualsidan</a> för mer detaljer."
 
 msgid ""
 "Please check the <a href='http://linux.die.net/man/5/nss_ldap' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Se <a href='http://linux.die.net/man/5/nss_ldap' target='_blank'>manualsidan</a> för mer detaljer."
 
 msgid "Root Bind DN"
 msgstr "Root Bind DN"
 
 msgid "Settings"
-msgstr ""
+msgstr "Inställningar"
 
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
@@ -87,7 +88,7 @@ msgid "Specifies the group suffix, e.g. 'ou=Groups'."
 msgstr "Specificerar gruppsuffix, ex. 'ou=Groups'."
 
 msgid "Specifies the port to connect to."
-msgstr ""
+msgstr "Anger porten som ska anslutas till."
 
 msgid "Specifies the user suffix, e.g. 'ou=Users'."
 msgstr "Specificerar användarsuffix, ex. 'ou=Users'. "
@@ -98,7 +99,7 @@ msgstr "FQDN eller IP-adress till servern."
 msgid ""
 "Use LDAP for authentication system-wide along with other authentication "
 "sources."
-msgstr ""
+msgstr "Använd LDAP för att autentisera hela systemet tillsammans med andra autentiseringskällor."
 
 msgid "Users suffix"
 msgstr "Användar-suffix"
