--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/sv_SV/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/sv_SV/openmediavault-netatalk.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 # Henrik Sandström <henrik.sandstroem@gmail.com>, 2012
+# Jonatan Nyberg, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2016-09-23 19:35+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-12 07:46+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,16 +20,16 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add share"
-msgstr "Lägg till utdelning"
+msgstr "Lägg till delad resurs"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Avancerade inställningar"
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Tillåt gästinloggning."
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Tillåt gäster att skapa eller ändra filer."
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Tillåt inloggningar med lösenord som skickas okrypterat."
@@ -64,7 +65,7 @@ msgid "Enable user home directories."
 msgstr "Aktivera hemkataloger för användare."
 
 msgid "Enabled"
-msgstr ""
+msgstr "Aktiverad"
 
 msgid "Extra options"
 msgstr "Extra inställningar"
@@ -73,28 +74,28 @@ msgid "General settings"
 msgstr "Allmänna inställningar"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Gästinloggning"
 
 msgid "Guest permissions"
-msgstr ""
+msgstr "Gästbehörigheter"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Gäster har bara läsbehörighet som standard."
 
 msgid "Hide dot files"
-msgstr "Dölj .dot-filer"
+msgstr "Dölj punkt-filer"
 
 msgid "Home directories"
 msgstr "Hemkataloger"
 
 msgid ""
 "If this option is set, then a password is required to access the share."
-msgstr "Om detta val är angett kommer ett lösenord att krävas för att ansluta till den utdelade resursen."
+msgstr "Om detta val är angett kommer ett lösenord att krävas för att ansluta till den delade resursen."
 
 msgid ""
 "If this option is set, then users may not create or modify files in the "
 "share."
-msgstr "Om detta val är angett kommer användare inte att tillåtas skapa eller ändra filer i den utdelade resursen."
+msgstr "Om detta val är angett kommer användare inte att tillåtas skapa eller ändra filer i den delade resursen."
 
 msgid ""
 "Limit the reported volume size to the given value in MiB, thus preventing TM"
@@ -118,7 +119,7 @@ msgid ""
 "Please check the <a "
 "href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' "
 "target='_blank'>manual page</a> for more details."
-msgstr ""
+msgstr "Se <a href='http://netatalk.sourceforge.net/3.0/htmldocs/afp.conf.5.html' target='_blank'>manualsidan</a> för mer detaljer."
 
 msgid "Quota"
 msgstr "Kvot"
@@ -133,10 +134,10 @@ msgid "Settings"
 msgstr "Inställningar"
 
 msgid "Shared folder"
-msgstr "Utdelad mapp"
+msgstr "Delad mapp"
 
 msgid "Shares"
-msgstr "Utdelningar"
+msgstr "Delade resurser"
 
 msgid "The location of the files to share."
 msgstr "Placeringen av filerna att dela."
@@ -157,4 +158,4 @@ msgid "Use AFP3 unix privileges."
 msgstr "Använd AFP3 Unix-privilegier"
 
 msgid "n/a"
-msgstr "n/a"
+msgstr "ingen uppgift"
