--- a/deb/openmediavault-route/usr/share/openmediavault/locale/sv_SV/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/sv_SV/openmediavault-route.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-route package.
 # 
 # Translators:
+# Jonatan Nyberg, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-11 20:46+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,25 +19,25 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add static route"
-msgstr ""
+msgstr "Lägg till statisk rutt"
 
 msgid "Comment"
-msgstr ""
+msgstr "Kommentar"
 
 msgid "Edit static route"
-msgstr ""
+msgstr "Redigera statisk rutt"
 
 msgid "Gateway"
-msgstr ""
+msgstr "Förmedlingsnod"
 
 msgid "Gateway used to reach the above network address."
-msgstr ""
+msgstr "Förmedlingsnod används för att nå ovanstående nätverksadress."
 
 msgid "IP or network address."
-msgstr ""
+msgstr "IP eller nätverksadress."
 
 msgid "Network"
-msgstr ""
+msgstr "Nätverk"
 
 msgid "Static Routes"
-msgstr ""
+msgstr "Statiska rutter"
