--- a/deb/openmediavault-shairport/usr/share/openmediavault/locale/sv_SV/openmediavault-shairport.po
+++ b/deb/openmediavault-shairport/usr/share/openmediavault/locale/sv_SV/openmediavault-shairport.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the openmediavault-shairport package.
 # 
 # Translators:
+# Jonatan Nyberg, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2016-09-24 17:04+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-11 20:01+0000\n"
+"Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,30 +19,30 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "A password is required to stream audio."
-msgstr ""
+msgstr "Ett lösenord krävs för att strömma ljud."
 
 msgid "Authentication"
-msgstr ""
+msgstr "Autentisering"
 
 msgid "Enable"
-msgstr ""
+msgstr "Aktivera"
 
 msgid "General settings"
-msgstr ""
+msgstr "Allmänna inställningar"
 
 msgid "Name"
-msgstr ""
+msgstr "Namn"
 
 msgid "Password"
-msgstr ""
+msgstr "Lösenord"
 
 msgid "Settings"
-msgstr ""
+msgstr "Inställningar"
 
 msgid "Shairport"
-msgstr ""
+msgstr "Shairport"
 
 msgid ""
 "The name the service will advertise to clients. Leave this field empty to "
 "use the hostname by default."
-msgstr ""
+msgstr "Namnet tjänsten kommer att annonsera till klienter. Lämna det här fältet tomt för att använda värdnamnet som standard."
