--- a/deb/openmediavault-tftp/usr/share/openmediavault/locale/sv_SV/openmediavault-tftp.po
+++ b/deb/openmediavault-tftp/usr/share/openmediavault/locale/sv_SV/openmediavault-tftp.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Volker <votdev@gmx.de>, 2017\n"
+"Last-Translator: Jonatan Nyberg <tralang@onenetbeyond.org>, 2017\n"
 "Language-Team: Swedish (https://www.transifex.com/votdev/teams/14254/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -47,6 +47,8 @@ msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
 "are allowed."
 msgstr ""
+"Se till att den delade mappen är offentligt skrivbar om nya filer är "
+"tillåtna."
 
 msgid "Port"
 msgstr "Port"
@@ -74,4 +76,4 @@ msgid "TFTP"
 msgstr "TFTP"
 
 msgid "The location of the files to share."
-msgstr "Placeringen av filerna att dela."
+msgstr "Placeringen av filerna att utdela."
