--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,4 +1,4 @@
-openmediavault (4.0.3) stable; urgency=low
+openmediavault (4.0.3-1) stable; urgency=low
 
   * Get correct CPU information for NanoPi NEO 2.
 
