Fix bug in 'omv-mkconf issue' command. Don't run any hook scripts when executing ifquery.
(cherry picked from commit 7e3e714ee63b1be34e2989f3a6104369c4ac9f6e)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -26,6 +26,8 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.88) stable; urgency=low
 
   * Various improvements.
+  * Fix bug in 'omv-mkconf issue' command. Don't run any hook scripts when
+    executing ifquery.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Aug 2017 09:33:39 +0200
 
