--- a/deb/openmediavault-shairport/debian/changelog
+++ b/deb/openmediavault-shairport/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-shairport (4.0-1) stable; urgency=low
+
+  * Adapt to Debian 9 (Stretch).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 22 Aug 2017 09:39:39 +0200
+
 openmediavault-shairport (3.2.8) stable; urgency=low
 
   * Fix first installation bug.
