--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (4.0-1) stable; urgency=low
+
+  * Adapt to Debian 9 (Stretch).
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 22 Aug 2017 12:54:59 +0200
+
 openmediavault-netatalk (3.2.10) stable; urgency=low
 
   * Various UI improvements.
