--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.4-1) stable; urgency=low
+
+  * Mantis 0001809: nfs-common service unit is masked.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 23 Aug 2017 12:13:53 +0200
+
 openmediavault (4.0.3-1) stable; urgency=low
 
   * Get correct CPU information for NanoPi NEO 2.
