--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-clamav (4.0.1-1) stable; urgency=low
+
+  * Various UI improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 29 Aug 2017 18:12:47 +0200
+
 openmediavault-clamav (4.0-1) stable; urgency=low
 
   * Adapt to Debian 9 (Stretch).
