--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-03 21:34+0200\n"
-"PO-Revision-Date: 2017-08-16 08:28+0000\n"
+"PO-Revision-Date: 2017-08-21 01:12+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -210,10 +210,10 @@ msgid "Shared folder"
 msgstr "Delad mapp"
 
 msgid "The location of the files to scan."
-msgstr "Plats för filer att skanna."
+msgstr "Platsen för filerna som ska skannas."
 
 msgid "The location which is used as quarantine."
-msgstr "Den plats som används som karantän."
+msgstr "Platsen som används som karantän."
 
 msgid "The option, how to handle infected files."
 msgstr "Alternativet, hur man hanterar infekterade filer."
