--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/cs_CZ/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/cs_CZ/openmediavault-clamav.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 08:45+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -195,7 +195,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Kontrolovat vícero položek obsahu složky naráz, využitím dostupných výpočetních vláken."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Naplánované úlohy"
 
 msgid "Send command output via email"
 msgstr "Odeslat výstup příkazu e-mailem"
