--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/es_ES/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/es_ES/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 10:03+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,7 +194,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Escanear el contenido de los directorios en paralelo usando todos los hilos disponibles."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Trabajos programados"
 
 msgid "Send command output via email"
 msgstr "Enviar resultado del comando via e-mail"
