--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/hu_HU/openmediavault-clamav.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 06:49+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -196,7 +196,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "Könyvtár tartalmának vizsgálata az elérhető szálak párhuzamos használatával."
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "Ütemezett feladatok"
 
 msgid "Send command output via email"
 msgstr "Parancssori kimenet küldése emailben"
