--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_TW/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/zh_TW/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:41+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 11:58+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -194,7 +194,7 @@ msgid "Scan the directory contents in parallel using available threads."
 msgstr "利用可用的執行緒對目錄內容做並行掃毒。"
 
 msgid "Scheduled Jobs"
-msgstr ""
+msgstr "預定工作"
 
 msgid "Send command output via email"
 msgstr "經由電子郵件發送指令執行結果輸出"
