--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 08:47+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3406,14 +3406,14 @@ msgid ""
 msgstr "Není vyžadováno, aby SSL relace z řídícího spojení byla následně použita i pro to datové."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "IP adresa relace byla změněna."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Při nečinnosti uživatele, za jak dlouho (v minutách) ukončit jeho relaci. Toto automatické odhlašování je možné vypnout nastavením na hodnotu 0 (nula)."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Uživatel této relace už neexistuje."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4008,7 +4008,7 @@ msgid "Write/Execute"
 msgstr "Zápis/spouštění"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Úložné zařízení poskytované virtualizací Xen"
 
 msgid "Yearly"
 msgstr "Každoročně"
