--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 10:02+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3408,14 +3408,14 @@ msgid ""
 msgstr "Los requerimientos de la sesión SSL no son necesarios para la conexión de datos"
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "La dirección Ip de la sesión ha cambiado."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Duración de la sesión en minutos. seleccionar \"0\" para deshabilitar el logout automático."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "El usuario de la sesión ya no existe."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4010,7 +4010,7 @@ msgid "Write/Execute"
 msgstr "Escribir/Ejecutar"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Dispositivo de Disco virtual Xen"
 
 msgid "Yearly"
 msgstr "Anualmente"
