--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 10:04+0000\n"
+"Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -324,7 +324,7 @@ msgstr "Egy e-mail üzenet elküldése az adminisztrátornak a parancs kimenette
 msgid ""
 "An email message with the command output (if any produced) is send to the "
 "user who performs the job."
-msgstr "Egy e-mail üzenet elküldése a felhasználónak a parancs kimenettel (ha van ilyen), aki végrehajtja a munkát."
+msgstr "Egy e-mail üzenet elküldése a felhasználónak a parancs kimenettel (ha van ilyen), aki végrehajtja a feladatot."
 
 msgid "An error has occured"
 msgstr "Hiba történt"
@@ -354,7 +354,7 @@ msgid "Apply"
 msgstr "Alkalmaz"
 
 msgid "Apply configuration changes"
-msgstr "Konfigurációs változások alkalmazása."
+msgstr "Konfigurációs változtatások alkalmazása."
 
 msgid "Apply permissions to files and subfolders"
 msgstr "Jogosultságok alkalmazása fájlokra és almappákra"
@@ -669,7 +669,7 @@ msgid ""
 "Compression is worth using if your connection is slow. The efficiency of the"
 " compression depends on the type of the file, and varies widely. Useful for "
 "internet transfer only."
-msgstr "Érdemes használni a tömörítést ha a kapcsolatod lassú. A tömörítés hatékonysága attól függ milyen típusú a fájl, és mennyire változó. Csak internetes átvitelnél hasznos."
+msgstr "Érdemes használni a tömörítést, ha a kapcsolatod lassú. A tömörítés hatékonysága attól függ milyen típusú a fájl, és mennyire változó. Csak internetes átvitelnél hasznos."
 
 msgid "Confirm password"
 msgstr "Jelszó megerősítése"
@@ -692,7 +692,7 @@ msgstr "Kapcsolat"
 msgid ""
 "Contact information, e.g. name or email address of the person responsible "
 "for this system."
-msgstr "Elérhetőség, pl. a rendszerért felelős személy neve vagy e-mail címe. "
+msgstr "Elérhetőség, pl. a rendszerért felelős személy neve, vagy e-mail címe. "
 
 msgid "Conveyance self-test"
 msgstr "Önteszt továbbítása"
@@ -1257,7 +1257,7 @@ msgid ""
 msgstr "FXP lehetővé teszi az átvitelt két távoli szerver között anélkül, hogy az adatfájl átvitelét a kliensnek is kérnie kellene."
 
 msgid "Falkland Islands"
-msgstr "Falkland Islands"
+msgstr "Falkland-szigetek"
 
 msgid "Family"
 msgstr "Család"
@@ -1339,7 +1339,7 @@ msgid "French Polynesia"
 msgstr "Francia Polinézia"
 
 msgid "French Southern Territories"
-msgstr "Francia déli területek"
+msgstr "Francia Déli területek"
 
 msgid "French Southern and Antarctic Territories"
 msgstr "Francia Déli és Antarktiszi területek"
@@ -1459,7 +1459,7 @@ msgid "Hide details"
 msgstr "Részletek elrejtése"
 
 msgid "Hide dot files"
-msgstr "Pont kezdetű fájlok elrejtése"
+msgstr "Ponttal kezdődő fájlok elrejtése"
 
 msgid "Home directories"
 msgstr "Saját könyvtárak"
@@ -1501,7 +1501,7 @@ msgid "ID"
 msgstr "ID"
 
 msgid "IP addresses of domain name servers used to resolve host names."
-msgstr "IP-címek a távoli névszerverek feloldásához."
+msgstr "IP címek a távoli névszerverek feloldásához."
 
 msgid "IPv4"
 msgstr "IPv4"
@@ -1622,7 +1622,7 @@ msgid "Indonesia"
 msgstr "Indonézia"
 
 msgid "Info"
-msgstr "Információ"
+msgstr "Infó"
 
 msgid "Informal"
 msgstr "Megfelelő"
@@ -2195,7 +2195,7 @@ msgid "Not UDP"
 msgstr "Nem UDP"
 
 msgid "Nothing"
-msgstr "Nincs hatása"
+msgstr "Nincs művelet"
 
 msgid "Notification"
 msgstr "Értesítés"
@@ -2426,7 +2426,7 @@ msgid ""
 msgstr "Kérlek vedd figyelembe, hogy a teszt során nem lesz kommunikáció a rendszerrel."
 
 msgid "Please reload the page to let the changes take effect."
-msgstr "Kérlek frissítsd az oldalt a változások érvénybe lépéséhez."
+msgstr "Kérlek frissítsd az oldalt a változtatások érvénybe léptetéséhez."
 
 msgid "Please wait ..."
 msgstr "Kis türelmet ..."
@@ -2663,7 +2663,7 @@ msgid "Replace"
 msgstr "Csere"
 
 msgid "Replace all existing permissions"
-msgstr "Minden létező jogosultság kicserélése"
+msgstr "Minden meglévő jogosultság kicserélése"
 
 msgid "Report"
 msgstr "Jelentés"
@@ -2978,7 +2978,7 @@ msgid "Services"
 msgstr "Szolgáltatások"
 
 msgid "Session expired."
-msgstr "A munkamenet lejárt."
+msgstr "Munkamenet lejárt."
 
 msgid "Session not authenticated."
 msgstr "Munkamenet nem hitelesített."
@@ -2994,7 +2994,7 @@ msgstr "Beállítás csak olvashatónak"
 
 msgid ""
 "Set the destination permissions to be the same as the source permissions"
-msgstr "Célállomás jogosultságai egyezzenek meg a forrás jogosultságaival."
+msgstr "A célállomás jogosultságai egyezzenek meg a forrás jogosultságaival."
 
 msgid "Set write only"
 msgstr "Beállítás csak írhatónak"
@@ -3041,7 +3041,7 @@ msgid "Short self-test"
 msgstr "Rövid önteszt"
 
 msgid "Show certificate"
-msgstr "Tanúsítvány mutatása"
+msgstr "Tanúsítvány megjelenítése"
 
 msgid "Show changelog"
 msgstr "Változások megtekintése"
@@ -3098,7 +3098,7 @@ msgid ""
 "Source address can be either a network IP address (with /mask), a IP range "
 "or a plain IP address. A '!' argument before the address specification "
 "inverts the sense of the address."
-msgstr "Forrás címe lehet egy hálózati IP cím (/mask-al ellátva), egy IP tartomány vagy egy egyszerű IP cím. A címe előtti \"!\" argumentum megfordítja ennek a címnek a jelentését."
+msgstr "Forrás címe lehet egy hálózati IP cím (/mask-al ellátva), egy IP tartomány, vagy egy egyszerű IP cím. A címe előtti \"!\" argumentum megfordítja ennek a címnek a jelentését."
 
 msgid "Source port"
 msgstr "Forrás port"
@@ -3174,7 +3174,7 @@ msgid ""
 msgstr "Rendszer állapot ellenőrzése és a legoptimálisabb CPU szint kiválasztása."
 
 msgid "Specifies which slave is the primary device."
-msgstr "Annak meghatározása, melyik kiszolgáló legyen az elsődleges eszköz."
+msgstr "Annak meghatározása, hogy melyik kiszolgáló legyen az elsődleges eszköz."
 
 msgid "Speed"
 msgstr "Sebesség"
@@ -3309,10 +3309,10 @@ msgid "The SSL certificate."
 msgstr "Az SSL tanúsítvány."
 
 msgid "The action to be done when pressing the power button."
-msgstr "Feladatok végrehajtása a bekapcsológomb megnyomásakor."
+msgstr "Feladatok végrehajtása a bekapcsoló gomb megnyomásakor."
 
 msgid "The changes have been applied successfully."
-msgstr "A változások sikeresen alkalmazva lettek."
+msgstr "A változtatások sikeresen alkalmazva lettek."
 
 msgid "The comment contains invalid characters"
 msgstr "A megjegyzés érvénytelen karaktereket tartalmaz"
@@ -3320,7 +3320,7 @@ msgstr "A megjegyzés érvénytelen karaktereket tartalmaz"
 msgid ""
 "The configuration has been changed. You must apply the changes in order for "
 "them to take effect."
-msgstr "A konfiguráció megváltozott! Alkalmazd a változásokat, hogy érvénybe léphessenek."
+msgstr "A konfiguráció megváltozott! Alkalmazd a változtatásokat, hogy érvénybe léphessenek."
 
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Az alapértelmezett SMTP levél szerver portja, pl. 25 vagy 587."
@@ -3368,7 +3368,7 @@ msgid "The number of days the certificate is valid for."
 msgstr "A tanúsítvány érvényességének ideje."
 
 msgid "The page will reload now to let the changes take effect."
-msgstr "Az oldal most újratöltődik a változások érvénybe lépéséhez."
+msgstr "Az oldal most újratöltődik a változtatások érvénybe lépéséhez."
 
 msgid "The password contains invalid characters"
 msgstr "A jelszó érvénytelen karaktereket tartalmaz"
@@ -3376,7 +3376,7 @@ msgstr "A jelszó érvénytelen karaktereket tartalmaz"
 msgid ""
 "The password that is used for access via rsync daemon. Note, this is not "
 "used for remote shell transport such as ssh."
-msgstr "Hozzáféréshez használható jelszó az rsync démon számára. Megjegyzés, ez nem használható távoli héj műveletekre, mint amilyen az ssh."
+msgstr "Hozzáféréshez használható jelszó az rsync démon számára. Megjegyzés: ez nem használható távoli héj műveletekre, mint amilyen az ssh."
 
 msgid ""
 "The path of the folder to share. The specified folder will be created if it "
@@ -3407,14 +3407,14 @@ msgid ""
 msgstr "Annak a követelménye, hogy az SSL munkamenettől a vezérlő kapcsolat újra használatához nincs szükség adat kapcsolatokra."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "A munkamenet IP címe megváltozott."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "A munkamenet időtúllépése percben. A 0 érték beállítása letiltja az automatikus kijelentkezést."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "A munkamenet felhasználó már nem létezik."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -3428,7 +3428,7 @@ msgid "The specified quota exceeds the max. possible value of 4TiB."
 msgstr "A megadott kvóta meghaladja a max. lehetséges 4TB értéket."
 
 msgid "The system will reboot now. This may take some time ..."
-msgstr "A rendszer most újraindul. Ez eltarthat egy kis ideig..."
+msgstr "A rendszer most újraindul. Ez eltarthat egy ideig..."
 
 msgid "The test email has been sent successfully. Please check your mailbox."
 msgstr "A teszt e-mail sikeresen elküldve. Kérlek tekintsd meg a postafiókodat."
@@ -4009,7 +4009,7 @@ msgid "Write/Execute"
 msgstr "Írás/Végrehajtás"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Xen virtuális lemez eszköz"
 
 msgid "Yearly"
 msgstr "Évente"
