--- a/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ru_RU/openmediavault.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 10:53+0000\n"
+"Last-Translator: Артур Мудрых <arturmon82@gmail.com>\n"
 "Language-Team: Russian (Russia) (http://www.transifex.com/votdev/openmediavault/language/ru_RU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3413,14 +3413,14 @@ msgid ""
 msgstr "Установка повторного использования сессии SSL управляющего соединения для передачи данных."
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "IP-адрес сеанса был изменен."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "Время тайм-аута сеанса в минутах. Установите 0, чтобы отключить автоматический выход из системы."
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "Пользователь сеанса больше не существует."
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4015,7 +4015,7 @@ msgid "Write/Execute"
 msgstr "Запись/Выполнить"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Дисковое устройство Xen"
 
 msgid "Yearly"
 msgstr "Ежегодно"
