--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
-"PO-Revision-Date: 2017-08-30 06:42+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-08-30 12:15+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3406,14 +3406,14 @@ msgid ""
 msgstr "從控制連線來的 SSL 作業階段須被重用做資料連線的需求將不被要求。"
 
 msgid "The session IP address has been changed."
-msgstr ""
+msgstr "該作業階段的 IP 地址已經被改變。"
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
 msgstr "作業階段的逾時時間，以分鐘為單位。設定為 0 來停用自動登出。"
 
 msgid "The session user no longer exists."
-msgstr ""
+msgstr "該作業階段的用戶不再存在。"
 
 msgid ""
 "The source remote server, e.g. [USER@]HOST:SRC, [USER@]HOST::SRC or "
@@ -4008,7 +4008,7 @@ msgid "Write/Execute"
 msgstr "寫/執行"
 
 msgid "Xen virtual disk device"
-msgstr ""
+msgstr "Xen 虛擬磁碟裝置"
 
 msgid "Yearly"
 msgstr "每年"
