Escape shell arguments.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.89) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 10 Sep 2017 20:51:25 +0200
+
 openmediavault (3.0.88) stable; urgency=low
 
   * Various improvements.
